# tinyserver

./: CMakeLists.txt  ReadMe.md
example/: main.cpp
tinyserver/: CMakeLists.txt
tinyserver/include/: simple_server.h
tinyserver/include/core/: BaseException.h  BaseHttpServer.h  CGIRequest.h  CGIResponse.h  HandleError.h  IHttpServer.h  ServerBackend.h
tinyserver/include/core/handler/: CGIHandler.h  CGIRequestHandler.h  ServerHandler.h
tinyserver/include/http/: HttpHeader.h  HttpObject.h  HttpRequest.h  HttpResponse.h  HttpSession.h
tinyserver/include/http/http_parser/: HttpParser.h  UrlCoder.h
tinyserver/include/middleware/: BaseMiddleware.cpp  BaseMiddleware.h
tinyserver/include/utils/: StringUtils.h  any.hpp  common_tool.h  shortcut.h  systool.h
tinyserver/src/core/: BaseHttpServer.cpp  CGIRequest.cpp  CGIResponse.cpp  ServerBackend.cpp
tinyserver/src/core/handler/: CGIHandler.cpp  CGIRequestHandler.cpp  ServerHandler.cpp
tinyserver/src/http/: HttpHeader.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpSession.cpp
tinyserver/src/http/http_parser/: HttpParser.cpp  UrlCoder.cpp
tinyserver/src/utils/: StringUtils.cpp  common_tool.cpp  http_parser_test.c  shortcut.cpp  systool.cpp
